Add pizza and soup recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,9 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pepperoni Pizza Recipe</title>
-    <h1>Pepperoni Pizza Recipe</h1>
 </head>
 <body>
-    
+    <h1>Pepperoni Pizza Recipe</h1>
+    <img src="../img/pizza.jpg">
+
+    <h2>Description</h2>
+
+        <p>There are few joys in life greater than biting into a slice of hot,
+        cheesy, zesty pizza pie.  When I was a lad, I used to go play hopscotch
+        over in Hell's Kitchen, and ol' Papa Sal would always offer a slice on
+        my way through.  Oh, the excitement with every bite!</p>
+        <p>This recipe is an attempt to reconnect with those childhood feelings.
+        To really feel that joy and happiness on your tongue, just like in the old
+        days.  Enjoy!</p>
+
+    <h2>Ingredients</h2>
+
+        <ul>
+            <li>16 oz pizza dough</li>
+            <li>1/2 cup pizza sauce</li>
+            <li>20 slices of pepperoni</li>
+            <li>12 oz mozzarella cheese, grated</li>
+            <li>1 tsp fresh oregano</li>
+            <li>Flour for rolling dough</li>
+        </ul>
+
+    <h2>Steps</h2>
+
+        <ol>
+            <li>Preheat oven to 500F</li>
+            <li>Make the sauce</li>
+            <li>Roll out the dough</li>
+            <li>Add the toppings</li>
+            <li>Cook the pizza</li>
+            <li>Slice and serve</li>
+        </ol>    
 </body>
 </html>
