--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <head>
     <h1>Odin Recipes</h1>
     <a href="recipes/pizza.html">Pepperoni Pizza Recipe</a>
+    <a href="recipes/soup.html">Chicken Noodle Soup Recipe</a>
 </head>
 
 <body>
