Add burger recipe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/pizza.html">Pepperoni Pizza Recipe</a>
     <a href="recipes/soup.html">Chicken Noodle Soup Recipe</a>
+    <a href="recipes/burger.html">Burger Recipe</a>
 </head>
 
 <body>
