--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Burger Recipe</title>
 </head>
 <body>
-    
+    <h1>Burger Recipe</h1>
+    <img src="..//img/burger.jpg">
+
+    <h2>Description</h2>
+        <p>Burgers are made from cow meat.</p>
+        <p>Moo.  Put cheese on a burger and what do you get?</p>
+        <p>Why, a cheeseburger, of course!</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>Ground chuck</li>
+            <li>Panko bread crumbs</li>
+            <li>Worcestershire sauce</li>
+            <li>Eggs</li>
+            <li>Milk</li>
+            <li>Seasonings</li>
+        </ul>
+
+    <h2>Steps</h2>
+        <ol>
+            <li>Add beef, egg, panko, milk, sauce, and spices to mixing bowl</li>
+            <li>Form disks and divide mixture into 6 patties</li>
+            <li>Press patties to desired thickness</li>
+            <li>Preheat grill to 350-400F</li>
+            <li>Fry patties for 2-4 minutes per side, depending on thickness</li>
+            <li>Serve on a bun with toppings of your choice</li>
+        </ol>
+
 </body>
 </html>
